# arena

./: .gitignore
chapter0_fundamentals/exercises/part0_prereqs/: tests.py
chapter1_transformer_interp/exercises/part41_indirect_object_identification/: 1.4.1_Indirect_Object_Identification_exercises copy.ipynb
chapter1_transformer_interp/exercises/part42_function_vectors_and_model_steering/: 1.4.2_Function_Vectors_&_Model_Steering_exercises.ipynb
project/: .gitignore  chat_format.py  debug_model.py  evaluate_humor.ipynb  process_data.py  pyproject.toml  requirements.txt  spec.md  test_inference.py  todo.md  train.py
project/PRESENTATION/: package-lock.json  pipeline.excalidraw  presentation.md
project/attention/: pyproject.toml
project/attention/.trunk/: trunk.yaml
project/sycophancy_probe/: PLAN.md  eval_probe.py  sycophancy_comparison.html  test_sycophancy.py  train.py  train_multiview.py
project/sycophancy_probe/multi-view-capabilities/: .gitignore  README.md  bipo-implementation.ipynb  (+4 more)
project/sycophancy_probe/probity/: .gitignore  LICENSE  README.md  pyproject.toml
project/sycophancy_probe/probity/tests/: test_probe_save_load.py
project/sycophancy_probe/probity/tests/unit/datasets/: test_base.py  test_position_finder.py  test_templated.py  test_tokenized.py
project/sycophancy_probe/probity/tests/unit/pipeline/: test_pipeline.py
project/sycophancy_probe/probity/tests/unit/trainer/: test_trainer.py
project/sycophancy_probe/probity/tutorials/: 1-probity-basics.py  2-dataset-creation.py  3-probe-variants.py  4-multiclass-probe.py
(+2589 files in other folders)
