[project]
name = "attention"
version = "0.0.0"
description = ""
authors = [{ name = "Matt Neary", email = "neary.matt@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.29.0",
    "torch>=2.0.1",
    "flask>=2.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
