[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"  # Ignore whitespace before ':' (conflicts with Black)
per-file-ignores = []
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "probity"
version = "0.1.0"
description = "A library for probing neural networks"
requires-python = ">=3.7"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "transformer_lens>=1.0.0",
    "scikit-learn>=1.3.0",
    "datasets>=2.12.0",
    "tqdm>=4.65.0",
    "tabulate>=0.9.0",
    "neuronpedia",
]

[tool.setuptools]
packages = ["probity"]